# rusty-search

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: algorithms.rs  main.rs  test.txt
