[package]
name = "rusty-search"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] } # CLI Parser
walkdir = "2.5"                                   # Rekursiver Datei-Iterator
anyhow = "1.0"                                    # Einfaches Error Handling