[package]
name = "rusty-search"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] } # CLI Parser
walkdir = "2.5"                                   # Rekursiver Datei-Iterator
anyhow = "1.0"                                    # Einfaches Error Handling
colored = "3.0.0"
rayon = "1.11.0"
